--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,9 @@
-* senhaj_h
+informations :
+
+LastName : SENHAJI RHAZI
+FirstName : Hamza
+Login EPITA :senhaj_h
+mail :hamza.senhaji-rhazi@epita.fr
+Linkedin: https://www.linkedin.com/in/hamza-senhaji-rhazi-72170678/
+
+I am student enginner in computer Science at EPITA in Paris from IONIS GROUP
