--- a/Decision_Tree/Decision_tree.ipynb
+++ b/Decision_Tree/Decision_tree.ipynb
@@ -2,37 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from graphviz import Digraph\n",
-    "import sys\n"
+    "from graphviz import Digraph\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -Loading datasets (df1 = Tenis Dataset , df2 = mushrooms dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../ressources/tennis.csv')\n"
+    "df = pd.read_csv('data.csv')\n",
+    "df2 = pd.read_csv('mushrooms.csv')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df2 = pd.read_csv('../ressources/mushrooms.csv')"
+    "## - Tree Decision Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +49,11 @@
     "        self.sons[att] = son\n",
     "    def set_att(self, att):\n",
     "        self.Attribute = att\n",
+    "    def check(self, data):\n",
+    "        tmpAt  = self\n",
+    "        while (tmpAt.sons != {}):\n",
+    "            tmpAt = tmpAt.sons[data[tmpAt.Attribute]]\n",
+    "        return tmpAt.Attribute\n",
     "    def genView(self, dot):\n",
     "        label = self.Attribute\n",
     "        dot.node(str(self), label)\n",
@@ -54,8 +64,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Functions of decisions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entropy functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +89,67 @@
     "    for c  in data[target].value_counts():\n",
     "        acc -= c/n * np.log2(c/n)\n",
     "    return acc\n",
-    "        \n",
-    "    \n",
+    "def get_entropys(data, elt, target):\n",
+    "    ents = 0\n",
+    "    l = [x for _,x in data.groupby(elt)]\n",
+    "    n = 0\n",
+    "    for d in l:\n",
+    "        n += len(d)\n",
+    "        ents += len(d) * get_entropy(d, target)\n",
+    "    return ents/n\n",
+    "def get_std_gain(data, elt, target):\n",
+    "    return get_entropy(data, target) - get_entropys(data, elt, target)\n",
+    "def get_gain_ratio(data, elt, target):\n",
+    "    d = get_entropy(data, elt)\n",
+    "    return np.inf if (d == 0) else get_std_gain(data, elt, target) / d\n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gini index"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_Gini(data,target):\n",
+    "    n = len(data)\n",
+    "    acc = 0\n",
+    "    for c  in data[target].value_counts():\n",
+    "        acc -= c/n \n",
+    "    return 1 - acc\n",
+    "def get_Ginis(data, elt, target):\n",
+    "    ents = 0\n",
+    "    l = [x for _,x in data.groupby(elt)]\n",
+    "    n = 0\n",
+    "    for d in l:\n",
+    "        n += len(d)\n",
+    "        ents += len(d) * get_Gini(d, target)\n",
+    "    return ents/n\n",
+    "def get_std_gainG(data, elt, target):\n",
+    "    return get_Gini(data, target) - get_Ginis(data, elt, target)\n",
+    "def get_gain_ratioG(data, elt, target):\n",
+    "    d = get_Gini(data, elt)\n",
+    "    return np.inf if (d == 0) else get_std_gainG(data, elt, target) / d\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - ID3 Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +161,11 @@
     "        lis_ent = []\n",
     "        for elt in data:\n",
     "            if(elt == target):\n",
-    "                lis_ent.append(np.inf)\n",
+    "                lis_ent.append(-np.inf)\n",
     "                continue\n",
-    "            ent = 0\n",
-    "            l = [x for _,x in data.groupby(elt)]\n",
-    "            for d in l:\n",
-    "                ent += func_ent(d, target)\n",
+    "            ent = func_ent(data, elt, target)\n",
     "            lis_ent.append(ent)\n",
-    "            indop = np.argmin(lis_ent)        \n",
+    "            indop = np.argmax(lis_ent)        \n",
     "            optimal = data.columns[indop]\n",
     "            root.set_att(optimal)\n",
     "        for d in [(att, x) for att,x in data.groupby(optimal)]:\n",
@@ -100,8 +174,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Tenis Dataset standard information Gain "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -110,14 +191,14 @@
        "'Digraph.gv.pdf'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "target = 'PlayTennis'\n",
-    "tree = ID3(df, target, get_entropy)\n",
+    "tree = ID3(df, target, get_std_gain)\n",
     "dot = Digraph(comment=\"Decision tree\")\n",
     "tree.genView(dot)\n",
     "dot.view(cleanup=True)"
@@ -125,7 +206,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check that all classifications are correct\n",
+    "np.all(np.array([tree.check(df.loc[i]) == df.loc[i][target] for i in range(len(df))]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Tenis Dataset  Gain ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -134,17 +243,251 @@
        "'Digraph.gv.pdf'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target2 = 'EDIBLE'\n",
-    "tree2 = ID3(df2, target2, get_entropy)\n",
+    "tree = ID3(df, target, get_gain_ratio)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check that all classifications are correct\n",
+    "np.all(np.array([tree.check(df.loc[i]) == df.loc[i][target] for i in range(len(df))]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mushrooms Dataset standard information Gain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target2 = 'type'\n",
+    "tree2 = ID3(df2, target2, get_std_gain)\n",
     "dot = Digraph(comment=\"Decision tree\")\n",
     "tree2.genView(dot)\n",
     "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check that all classifications are correct\n",
+    "np.all(np.array([tree2.check(df2.loc[i]) == df2.loc[i][target2] for i in range(len(df2))]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mushrooms Dataset Gain ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target2 = 'type'\n",
+    "tree2 = ID3(df2, target2, get_gain_ratio)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree2.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check that all classifications are correct\n",
+    "np.all(np.array([tree2.check(df2.loc[i]) == df2.loc[i][target2] for i in range(len(df2))]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use of Gini index instead of Entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target = 'PlayTennis'\n",
+    "tree = ID3(df, target, get_std_gainG)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree = ID3(df, target, get_gain_ratioG)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target2 = 'type'\n",
+    "tree2 = ID3(df2, target2, get_std_gainG)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree2.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target2 = 'type'\n",
+    "tree2 = ID3(df2, target2, get_gain_ratioG)\n",
+    "dot = Digraph(comment=\"Decision tree\")\n",
+    "tree2.genView(dot)\n",
+    "dot.view(cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remark\n",
+    "The use of Gini Index give much bigger Trees"
    ]
   },
   {
